--- a/1.html
+++ b/1.html
@@ -3,18 +3,75 @@
 <head>
     <title>IPO</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="colors.js"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-517850PC8J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-517850PC8J');
+</script>
 </head>
 <body>
     <h1><a href="index.html"> IPO </a></h1>
+    <div id="grid">
     <ul>
     <li><a href="1.html">WCP</a></li>
     <li><a href="2.html">ALPHABIO</a></li>
     <li><a href="3.html">SUNBIO</a></li>
     </ul>
-
+    <div id="article">
+        <input type="button" value="night" onclick="nightDayHandler(this);">
     <h2>WCP</h2>
     <p style="margin-top: 40px;"></p>
     <p> WCP is KOR company. It product secondary cellIt. This IPO started 2022/09/20~2022/09/21. <br>
         Collusion Price is 60,000 won, also demand proceed is 33:1.</p>
         <img src="wcp.jpg" width="500">
+    </div>
+    </div>
+    </body>
+
+        <!-- 위젯 추가 -->
+  <!-- 댓글 -->
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://bbscording0922.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+  </noscript>
+  
+  <!--Start of Tawk.to Script-->
+  <!-- 상담쳇 -->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6333a67a37898912e96ba9cd/1ge0s4k9h';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+</body>
+</html>  
 
