--- a/index.html
+++ b/index.html
@@ -3,14 +3,29 @@
 <head>
     <title>IPO</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="colors.js"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-517850PC8J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-517850PC8J');
+</script>
 </head>
 <body>
     <h1><a href="index.html"> IPO </a></h1>
+    <div id="grid">
     <ul>
     <li><a href="1.html">WCP</a></li>
     <li><a href="2.html">ALPHABIO</a></li>
     <li><a href="3.html">SUNBIO</a></li>
     </ul>
+    <div id="article">
+        <input type="button" value="night" onclick="nightDayHandler(this);">
     <h2> IPO mean? </h2>
 
     <p>An initial public offering (IPO) or stock launch is a public offering in which shares of a company are sold to institutional investors and usually also to retail investors. 
@@ -27,6 +42,51 @@
          Most companies undertake an IPO with the assistance of an investment banking firm acting in the capacity of an underwriter.
          Underwriters provide several services, including help with correctly assessing the value of shares (share price) and establishing a public market for shares (initial sale).
          Alternative methods such as the Dutch auction have also been explored and applied for several IPOs.</p>
+            </div>
+            </div>
+        
+            </body>
+            </html>
+
+
+         <!-- 위젯 추가 -->
+  <!-- 댓글 -->
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://bbscording0922.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+  </noscript>
+  
+  <!--Start of Tawk.to Script-->
+  <!-- 상담쳇 -->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6333a67a37898912e96ba9cd/1ge0s4k9h';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+  
 
 
 
